[tool.poetry]
name = "autobox"
version = "0.1.0"
description = ""
authors = ["Shoomow <denis.shvetsov.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.1"
supabase = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
